fixed id attribute, formatted doc, set wrap text

--- a/assets/script.css
+++ b/assets/script.css
@@ -16,11 +16,11 @@
     background-color: white;
 }
 
-.day-1{
+day-1{
 
 }
 
 
-/* future-container{
+future-container{
     align-items: stretch;
-} */
+}
